...
    <item name="action_button_reschedule_booking"
          type="id"/>
    <item name="action_button_edit_hours"
          type="id"/>
    <item name="action_button_skip_booking"
          type="id"/>
    <item name="action_button_cancel_booking"
          type="id"/>
    <item name="action_button_contact_phone"
          type="id"/>
    <item name="action_button_contact_text"
          type="id"/>
    <item name="edit_booking_extras_button"
...
