<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/handy_bg"
              android:orientation="vertical"
              tools:context="com.handybook.handybook.ui.fragment.BookingsFragment"
    >

    <FrameLayout
        android:id="@+id/nav_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_text"
            style="@style/TextView.Navbar"
            android:text="@string/my_bookings"/>

        <RelativeLayout
            android:id="@+id/menu_button_layout"
            style="@style/MenuButtonLayout"/>
    </FrameLayout>
    <LinearLayout android:orientation="horizontal"
                  android:gravity="center" android:measureWithLargestChild="true"
                  android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_weight="0">

        <Button android:id="@+id/b_past"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/past">
        </Button>
        <Button android:id="@+id/b_upcoming"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/upcoming">
        </Button>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>
