...
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_card_booking_row_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Thursday, Sept 12"
            style="@style/TextView.Medium"/>

        <TextView
...
