<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/fragment_booking_get_quote_container"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/handy_bg"
              android:orientation="vertical"
    >
...
                    android:gravity="center"
                    android:padding="@dimen/default_padding"
                    android:text="@string/where_located_simple"
                    />

                <com.handybook.handybook.core.ui.widget.ZipCodeInputTextView
                    android:id="@+id/booking_zipcode_input_text"
                    style="@style/EditText.Last.ZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/fragment_booking_get_quote_next_button"
                style="@style/Button.Green"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/next"
                />

        </LinearLayout>
...
