<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/handy_bg"
              android:orientation="vertical"
    >

    <include layout="@layout/toolbar"/>

    <!--TODO: create templates for the booking flow screens-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_padding"
            >

            <TextView
                style="@style/TextView.CenteredHeader"
                android:text="@string/how_often_should_come"
                />

            <LinearLayout
                android:id="@+id/options_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@color/white"
                android:orientation="vertical"
                />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/next_button"
        style="@style/Button.Green"
        android:text="@string/update"
        android:textAllCaps="false"
        />
</LinearLayout>
