...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/handy_bg"
    >

    <Button
        android:id="@+id/skip_button"
        style="@style/Button.Green"
        android:text="@string/skip"
        />

    <include layout="@layout/toolbar_booking_flow"/>

...
                    android:contentDescription="arrow left"
                    android:padding="16dp"
                    android:src="@drawable/ic_arrow_left"
                    />

                <ImageView
                    android:id="@+id/arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="arrow right"
...
